# motis-portable

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  web_server.py
.github/workflows/: ci.yml
Scripts/: docs-list-local.mjs
cmake/: buildcache.cmake  pkg.cmake
docs/: HANDOFF.md  PORTABLE_APP.md  README.md  RELEASING.md  ROADMAP.md  TODO.md  WORKFLOW.md  dev-setup-server.md  guardrail-review-2026-02-14.md  mislabel-inventory.md
gui/: README.md
gui-svelte/: README.md  build-usb.sh  package.json
gui-svelte/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui-svelte/src-tauri/.cargo/: config.toml
gui-svelte/src-tauri/capabilities/: default.json
gui-svelte/src-tauri/src/: main.rs  native.rs  protocol.rs
gui-svelte/usb-template/: README.txt  RUN.sh  motis-import.sh  sweden-route-fix.lua
gui/src/: index.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: index.html  main.rs  native.rs
native/: CMakeLists.txt  api.cc  api.h  api_dispatch.cc  api_internal.h  base64.cc  base64.h  example.cc  example_ipc.cc
test/: native_ipc_regression_test.cc
ui/: .prettierignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
ui/src/: app.css  app.html
ui/src/lib/: AddressTypeahead.svelte  AdvancedOptions.svelte  Alerts.svelte  ConnectionDetail.svelte  DateInput.svelte  Debug.svelte  DeparturesMask.svelte  IsochronesInfo.svelte  IsochronesMask.svelte  ItineraryList.svelte  RailViz.svelte  SearchMask.svelte  StopTimes.svelte  StreetModes.svelte  Time.svelte  TransitModeSelect.svelte  ViaStopOptions.svelte  getModeName.ts  modeStyle.ts  preprocessItinerary.test.ts  preprocessItinerary.ts  requestState.ts  (+5 more)
ui/tests/: test.ts
usb-bundle/: README.txt  start.sh
usb-bundle/native-api/: README.txt
usb-bundle/ui/: index.html
(+63 files in other folders)
