[package]
name = "motis-gui"
version = "0.1.0"
description = "MOTIS Transit GUI - Portable USB Edition"
authors = ["MOTIS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.0"

# No build dependencies needed - we use subprocess IPC instead of FFI

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.dev]
opt-level = 0

# Release profile optimized for portability and static linking
[profile.release]
opt-level = 3
strip = true          # Strip symbols for smaller binary
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better LTO
panic = "abort"       # Smaller binary, no unwinding

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
